--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
       "storage",
       "activeTab",
       "scripting",
-      "webRequest",
-      "webRequestBlocking"
+      "webRequest"
     ],
     "host_permissions": [
       "https://math.prodigygame.com/*",
